- fix the reading new bit
near block in D2Item.java
if (iSocketed) {
    iSocketNrTotal = (short) pFile.read(4);
}

the bit should be before this block, not after

- also fix some compile warnings